--- a/docs/SRS/SRS.tex
+++ b/docs/SRS/SRS.tex
@@ -111,8 +111,7 @@ This section outlines the primary, secondary, and tertiary audiences for this do
 
 \subsection{Primary Audience}
 \begin{itemize}
-    \item \textbf{Development Team:} This document is intended for future developers and engineers working on the project. It assumes a technical background in areas such as crowdsourcing platforms, satellite image processing, and AI modeling.
-    \item \textbf{Current Team Members:} The document provides a foundation for tracking design decisions and assumptions made by the original developers, who possess expertise in data processing, backend development, and labeling systems.
+    \item \textbf{Development Team:} This document is intended for current or future developers and engineers working on the project. It assumes a technical background in areas such as crowdsourcing platforms, satellite image processing, and AI modeling. It provides a foundation for tracking design decisions and assumptions made by the original developers, who possess expertise in data processing, backend development, and labeling systems.
 \end{itemize}
 
 \subsection{Secondary Audience}
