nfr-oe9 adjusted

--- a/docs/SRS/SRS.tex
+++ b/docs/SRS/SRS.tex
@@ -1205,9 +1205,9 @@ N/A
 \subsubsection*{NFR-OE9}
 \label{sec:OE9}
 \begin{itemize}
-  \item \textbf{Description:} Each release shall maintain the functionality of existing features without introducing regressions.
+  \item \textbf{Description:} Each release shall preserve the core functionality of existing features without introducing regressions or deprecations.
   \item \textbf{Rationale:} Ensures continuity and reliability of the platform by preventing new updates from disrupting or breaking previously working features, thereby maintaining user trust and satisfaction.
-  \item \textbf{Fit Criterion:} Automated regression testing is performed for each release, and no existing critical features fail post-release. Verification is achieved through passing all regression test cases before deployment.
+  \item \textbf{Fit Criterion:} Automated usability testing is performed for each release, and no existing critical features fail post-release. Verification is achieved through passing all regression test cases before deployment.
 \end{itemize}
 
 
