--- a/docs/SRS/SRS.tex
+++ b/docs/SRS/SRS.tex
@@ -1198,9 +1198,9 @@ N/A
 \subsubsection*{NFR-OE8}
 \label{sec:OE8}
 \begin{itemize}
-  \item \textbf{Description:} The system shall conduct beta testing with a select group of users to gather feedback, identify bugs, and refine features before full-scale deployment.
+  \item \textbf{Description:} The system shall be showcased to select group of users to gather feedback, identify bugs, and refine features before full-scale deployment.
   \item \textbf{Rationale:} Ensures the platform meets user expectations and operates smoothly upon official release.
-  \item \textbf{Fit Criterion:} Beta testing results in fewer than 10 critical bugs and includes actionable feedback from at least 50 beta users, leading to necessary iterative improvements.
+  \item \textbf{Fit Criterion:} Testing results in fewer than 10 critical bugs identified and includes actionable feedback from at least 50 labelers, leading to necessary iterative improvements.
 \end{itemize}
 \subsubsection*{NFR-OE9}
 \label{sec:OE9}
