Added uer interfaces and flow

--- a/docs/Design/SoftArchitecture/MG.tex
+++ b/docs/Design/SoftArchitecture/MG.tex
@@ -393,9 +393,56 @@ arrows in the diagram typically correspond to the presence of import statement.}
 %\section*{References}
 
 \section{User Interfaces}
-
-\wss{Design of user interface for software and hardware.  Attach an appendix if
-needed. Drawings, Sketches, Figma}
+\begin{figure}[H]
+    \centering
+    \includegraphics[width=\linewidth]{home.png}
+    \caption{Home Page}
+\end{figure}
+\begin{figure}[H]
+    \centering
+    \includegraphics[width=\linewidth]{login.png}
+    \caption{Login Page}
+\end{figure}
+\begin{figure}[H]
+    \centering
+    \includegraphics[width=\linewidth]{forgot_password.png}
+    \caption{Forgot Password}
+\end{figure}
+\begin{figure}[H]
+    \centering
+    \includegraphics[width=\linewidth, height=10cm]{register.png}
+    \caption{Register Page}
+\end{figure}
+\begin{figure}[H]
+    \centering
+    \includegraphics[width=\linewidth, height=8cm]{label_projects.png}
+    \caption{Projects to Label Page}
+\end{figure}
+\begin{figure}[H]
+    \centering
+    \includegraphics[scale=0.4]{label.png}
+    \caption{Label Page}
+\end{figure}
+\begin{figure}[H]
+    \centering
+    \includegraphics[scale=0.25]{client_projects.png}
+    \caption{Client Projects Page}
+\end{figure}
+\begin{figure}[H]
+    \centering
+    \includegraphics[scale=0.4]{project_stats.png}
+    \caption{Project Status Page}
+\end{figure}
+\begin{figure}[H]
+    \centering
+    \includegraphics[scale=0.4]{user_info.png}
+    \caption{User Information Page}
+\end{figure}
+\begin{figure}[H]
+    \centering
+    \includegraphics[width=\linewidth]{UI_flow.png}
+    \caption{Page Flow Diagram}
+\end{figure}
 
 \section{Design of Communication Protocols}
 
