Interface related modules added to hierarchy

--- a/docs/Design/SoftArchitecture/MG.tex
+++ b/docs/Design/SoftArchitecture/MG.tex
@@ -214,6 +214,36 @@ Account Creation Controller
 Account Update Controller
 \item [\refstepcounter{mnum} \mthemnum \label{ac}:]
 Authentication Controller
+\item [\refstepcounter{mnum} \mthemnum \label{siri}:]
+Satellite Image Request Interface
+\item [\refstepcounter{mnum} \mthemnum \label{sirc}:]
+Satellite Image Request Controller
+\item [\refstepcounter{mnum} \mthemnum \label{sirf}:]
+Satellite Image Request Form
+\item [\refstepcounter{mnum} \mthemnum \label{pci}:]
+Project Creation Interface
+\item [\refstepcounter{mnum} \mthemnum \label{pcc}:]
+Project Creation Controller
+\item [\refstepcounter{mnum} \mthemnum \label{pcf}:]
+Project Creation Form
+\item [\refstepcounter{mnum} \mthemnum \label{srfi}:]
+Service Request Failure Interface
+\item [\refstepcounter{mnum} \mthemnum \label{iui}:]
+Image Upload Interface
+\item [\refstepcounter{mnum} \mthemnum \label{ri}:]
+Report Interface
+\item [\refstepcounter{mnum} \mthemnum \label{rc}:]
+Report Controller
+\item [\refstepcounter{mnum} \mthemnum \label{psi}:]
+Project Selection Interface
+\item [\refstepcounter{mnum} \mthemnum \label{project}:]
+Project
+\item [\refstepcounter{mnum} \mthemnum \label{lbli}:]
+Labeling Interface
+\item [\refstepcounter{mnum} \mthemnum \label{lblc}:]
+Labeling Controller
+\item [\refstepcounter{mnum} \mthemnum \label{image}:]
+Image
 \end{description}
 
 
@@ -235,11 +265,26 @@ Authentication Controller
 & Labeler\\
 & Client\\ 
 & User\\
+& Satellite Image Request Interface\\
+& Satellite Image Request Form\\
+& Project Creation Interface\\
+& Project Creation Form\\
+& Service Request Failure Interface\\
+& Image Upload Interface\\
+& Report Interface\\
+& Project Selection Interface\\
+& Project\\
+& Labeling Interface\\
+& Image\\
 \midrule
 
 \multirow{3}{0.3\textwidth}{Software Decision Module} & {Account Creation Controller}\\
 & Account Update Controller\\
 & Authentication Controller\\
+& Satellite Image Request Controller\\
+& Project Creation Controller\\
+& Report Controller\\
+& Labeling Controller\\
 \bottomrule
 
 \end{tabular}
