--- a/docs/Design/SoftArchitecture/MG.tex
+++ b/docs/Design/SoftArchitecture/MG.tex
@@ -219,7 +219,7 @@ Satellite Image Request Interface
 \item [\refstepcounter{mnum} \mthemnum \label{sirc}:]
 Satellite Image Request Controller
 \item [\refstepcounter{mnum} \mthemnum \label{sirf}:]
-Satellite Image Request Form
+Satellite Image Request
 \item [\refstepcounter{mnum} \mthemnum \label{pci}:]
 Project Creation Interface
 \item [\refstepcounter{mnum} \mthemnum \label{pcc}:]
@@ -268,7 +268,7 @@ Image
 & Client\\ 
 & User\\
 & Satellite Image Request Interface\\
-& Satellite Image Request Form\\
+& Satellite Image Request\\
 & Project Creation Interface\\
 & Project\\
 & Service Request Failure Interface\\
@@ -428,7 +428,7 @@ to be implemented.
 \item[Type of Module:] Abstract Object
 \end{description}
 
-\subsubsection{Satellite Image Request Form (\mref{sirf})}
+\subsubsection{Satellite Image Request (\mref{sirf})}
 
 \begin{description}
 \item[Secrets:]The format and structure of the data needed for a satellite image request.
