--- a/docs/Design/SoftDetailedDes/MIS.tex
+++ b/docs/Design/SoftDetailedDes/MIS.tex
@@ -808,6 +808,415 @@ None
 \subsubsection{Local Functions}
 None
 
+\section{MIS of Labeler} \label{labeler}
+
+\subsection{Module}
+
+Labeler
+
+\subsection{Uses}
+Extends User \ref{user}
+
+\subsection{Syntax}
+
+\subsubsection{Exported Constants}
+None
+\subsubsection{Exported Access Programs}
+
+\begin{center}
+\begin{tabular}{p{3cm} p{4cm} p{4cm} p{2cm}}
+\hline
+\textbf{Name} & \textbf{In} & \textbf{Out} & \textbf{Exceptions} \\
+\hline
+getFirstName & - & string & - \\
+getLastName & - & string & - \\
+getSkills & - & list[string] & - \\
+getAvailability & - & int & - \\
+setFirstName & string & - & - \\
+setLastName & string & - & - \\
+setSkills & list[string] & - & - \\
+setAvailability & int & - & - \\
+\hline
+\end{tabular}
+\end{center}
+
+\subsection{Semantics}
+
+\subsubsection{State Variables}
+\begin{itemize}
+    \item firstName: string
+    \item lastName: string
+    \item skills: list[string]
+    \item availability: int
+\end{itemize}
+\subsubsection{Environment Variables}
+None
+
+\subsubsection{Assumptions}
+None
+
+\subsubsection{Access Routine Semantics}
+
+\noindent getFirstName():
+\begin{itemize}
+\item output: out := firstName
+\end{itemize}
+
+\noindent getLastName():
+\begin{itemize}
+\item output: out := lastName
+\end{itemize}
+
+\noindent getSkills():
+\begin{itemize}
+\item output: out := skills
+\end{itemize}
+
+\noindent getAvailability():
+\begin{itemize}
+\item output: out := availability
+\end{itemize}
+
+\noindent setFirstName(newfn):
+\begin{itemize}
+\item transition: firstName := newfn 
+\end{itemize}
+
+\noindent setLastName(newln):
+\begin{itemize}
+\item transition: lastName := newln
+\end{itemize}
+
+\noindent setSkills(newSkills):
+\begin{itemize}
+\item transition: skills := newSkills 
+\end{itemize}
+
+\noindent setAvailability(newAvail):
+\begin{itemize}
+\item transition: availability := newAvail
+\end{itemize}
+
+\subsubsection{Local Functions}
+None
+
+\section{MIS of Client} \label{client}
+
+\subsection{Module}
+
+Client
+
+\subsection{Uses}
+Extends User \ref{user}
+
+\subsection{Syntax}
+
+\subsubsection{Exported Constants}
+None
+\subsubsection{Exported Access Programs}
+
+\begin{center}
+\begin{tabular}{p{3.2cm} p{4cm} p{4cm} p{2cm}}
+\hline
+\textbf{Name} & \textbf{In} & \textbf{Out} & \textbf{Exceptions} \\
+\hline
+getCompanyName & - & string & - \\
+getIndustry & - & string & - \\
+getTypicalProject & - & Image & - \\
+setCompanyName & string & - & - \\
+setIndustry & string & - & - \\
+setTypicalProject & string & - & - \\
+\hline
+\end{tabular}
+\end{center}
+
+\subsection{Semantics}
+
+\subsubsection{State Variables}
+\begin{itemize}
+    \item companyName: string
+    \item industry: string
+    \item typicalProject: string
+\end{itemize}
+\subsubsection{Environment Variables}
+None
+
+\subsubsection{Assumptions}
+None
+
+\subsubsection{Access Routine Semantics}
+
+\noindent getCompanyName():
+\begin{itemize}
+\item output: out := companyName
+\end{itemize}
+
+\noindent getIndustry():
+\begin{itemize}
+\item output: out := industry
+\end{itemize}
+
+\noindent getTypicalProject():
+\begin{itemize}
+\item output: out := typicalProject
+\end{itemize}
+
+\noindent setCompanyName(newcn):
+\begin{itemize}
+\item transition: companyName := newcn 
+\end{itemize}
+
+\noindent setIndustry(newIndustry):
+\begin{itemize}
+\item transition: industry := newIndustry
+\end{itemize}
+
+\noindent setTypicalProject(newtp):
+\begin{itemize}
+\item transition: typicalProject := newtp 
+\end{itemize}
+
+\subsubsection{Local Functions}
+None
+
+\section{MIS of User} \label{user}
+
+\subsection{Module}
+
+User
+
+\subsection{Uses}
+None
+
+\subsection{Syntax}
+
+\subsubsection{Exported Constants}
+None
+\subsubsection{Exported Access Programs}
+
+\begin{center}
+\begin{tabular}{p{2cm} p{4cm} p{4cm} p{2cm}}
+\hline
+\textbf{Name} & \textbf{In} & \textbf{Out} & \textbf{Exceptions} \\
+\hline
+getEmail & - & string & - \\
+getPassword & - & string & - \\
+getProfilePic & - & Image & - \\
+setEmail & string & - & - \\
+setPassword & string & - & - \\
+setProfilePic & string & - & - \\
+\hline
+\end{tabular}
+\end{center}
+
+\subsection{Semantics}
+
+\subsubsection{State Variables}
+\begin{itemize}
+    \item email: string
+    \item password: string
+    \item profilePic: image
+\end{itemize}
+\subsubsection{Environment Variables}
+None
+
+\subsubsection{Assumptions}
+None
+
+\subsubsection{Access Routine Semantics}
+
+\noindent getEmail():
+\begin{itemize}
+\item output: out := email
+\end{itemize}
+
+\noindent getPassword():
+\begin{itemize}
+\item output: out := password
+\end{itemize}
+
+\noindent getProfilePic():
+\begin{itemize}
+\item output: out := profilePic
+\end{itemize}
+
+\noindent setEmail(newEmail):
+\begin{itemize}
+\item transition: email := newEmail 
+\end{itemize}
+
+\noindent setPassword(newPassword):
+\begin{itemize}
+\item transition: password := newPassword
+\end{itemize}
+
+\noindent setProfilePic(newProfliePic):
+\begin{itemize}
+\item transition: profilePic := newProfilePic 
+\end{itemize}
+
+\subsubsection{Local Functions}
+None
+
+\section{MIS of Account Creation Controller} \label{acc}
+
+\subsection{Module}
+
+Account Creation Controller
+
+\subsection{Uses}
+
+Account Creation Interface \ref{aci}\\
+Account Database \ref{accd} \\
+User \ref{user} \\
+Labeler \ref{labeler} \\
+Client \ref{client}
+
+\subsection{Syntax}
+
+\subsubsection{Exported Constants}
+None
+\subsubsection{Exported Access Programs}
+
+\begin{center}
+\begin{tabular}{p{2cm} p{4cm} p{4cm} p{2cm}}
+\hline
+\textbf{Name} & \textbf{In} & \textbf{Out} & \textbf{Exceptions} \\
+\hline
+validateForm & list[(string, string)], Enum[labeler, client] & boolean & - \\
+createUser & list[(string, string)], Enum[labeler, client] & User & - \\
+uploadUser & User & - & DatabaseException \\
+\hline
+\end{tabular}
+\end{center}
+
+\subsection{Semantics}
+
+\subsubsection{State Variables}
+None
+
+\subsubsection{Environment Variables}
+None
+
+\subsubsection{Assumptions}
+Assumes AccountDatabase is operational when calling uploadUser.
+
+\subsubsection{Access Routine Semantics}
+\noindent validateForm(formData, userType):
+\begin{itemize}
+\item output: out := 
+$ \text{hasRequiredFields}(\text{formData}, \text{userFields}) \land \nonumber
+    \text{isValidEmail}(\text{formData.email}) \land \nonumber \\
+    \text{isValidPassword}(\text{formData.password}) \land $
+\[
+\begin{cases}
+    \text{hasRequiredFields}(\text{formData}, \text{labelerFields}), & \text{if } \text{userType} = \text{"labeler"} \\
+    \text{hasRequiredFields}(\text{formData}, \text{clientFields}), & \text{if } \text{userType} = \text{"client"} \\
+    \text{true}, & \text{otherwise}
+\end{cases}
+\]
+\textbf{Where:}
+\begin{align*}
+    \text{userFields} &= \{ \text{email, password} \} \\
+    \text{labelerFields} &= \{ \text{firstName, lastName, skills, availability} \} \\
+    \text{clientFields} &= \{ \text{companyName, industry, typicalProject} \}
+\end{align*}
+\end{itemize}
+
+\noindent createUser(formData, userType):
+\begin{itemize}
+\item output: out := 
+\[
+\begin{cases}
+    \text{Labeler}(\text{formData.email}, \text{formData.password}, \text{formData.firstName}, \\ \text{formData.lastName}, \text{formData.skills}, \text{int(formData.availability)}), & \text{if } \text{userType} = \text{"labeler"} \\
+    \text{Client}(\text{formData.email}, \text{formData.password}, \text{formData.companyName}, \\ \text{formData.industry}, \text{formData.typicalProject}) & \text{if } \text{userType} = \text{"client"} \\
+\end{cases}
+\]
+\end{itemize}
+
+\noindent uploadUser(newUser):
+\begin{itemize}
+\item transition: Passes the User object to the AccountDatabase for storage.
+\item exception: Throws DatabaseException if storage fails.
+\end{itemize}
+
+\subsubsection{Local Functions}
+\begin{itemize}
+    \item 
+        \text{hasRequiredFields}(\text{data}, \text{fields}) =
+        $\forall \text{field} \in \text{fields}, (\text{data[field]} \neq \text{""})$
+        
+    \item isValidEmail(email) = $\text{email} \in V \land \text{email} \neg \in \text{Registered Emails}$
+    
+    Let E represent the set of all email addresses, and let V represent the set of all valid email addresses. A valid email address conforms to the general pattern:\\\\
+  V = $(\forall\; email \in E\;  |\; email \; matches \; the \; pattern \; $[a-zA-Z0-9+\_.-]+@[a-zA-Z0-9.-]+[a-zA-Z])
+  \item isValidPassword(password) = $(password \; matches \; the \; pattern \; $(?=.*[a-z])(?=.*[A-Z])(?=.*[0-9])(?=.*[\#\$\%\&\*\@])[a-zA-Z0-9\#\$\%\&\*\@]\{8,\})\\
+  
+\end{itemize}
+
+\section{MIS of Account Update Controller} \label{auc}
+
+\subsection{Module}
+
+Account Update Controller
+
+\subsection{Uses}
+
+Account Update Interface \ref{aui}\\
+Account Database \ref{accd} \\
+User \ref{user} \\
+
+\subsection{Syntax}
+
+\subsubsection{Exported Constants}
+None
+\subsubsection{Exported Access Programs}
+
+\begin{center}
+\begin{tabular}{p{3cm} p{4cm} p{4cm} p{2cm}}
+\hline
+\textbf{Name} & \textbf{In} & \textbf{Out} & \textbf{Exceptions} \\
+\hline
+validateForm & list[(string, string)] & boolean & - \\
+getUser & string & - & - \\
+requestUpdate & User & - & DatabaseException \\
+\hline
+\end{tabular}
+\end{center}
+
+\subsection{Semantics}
+
+\subsubsection{State Variables}
+\begin{itemize}
+    \item user: User
+\end{itemize}
+
+\subsubsection{Environment Variables}
+None
+
+\subsubsection{Assumptions}
+Assumes AccountDatabase is operational when calling requestUpdate.
+
+\subsubsection{Access Routine Semantics}
+\noindent validateForm(formData):
+\begin{itemize}
+\item output: out := $\forall \text{data} \in \text{formData}, (\text{data[1]} \neq \text{""})$
+\end{itemize}
+
+\noindent getUser(email):
+\begin{itemize}
+\item transition: user := AccountDatabase.retreiveUser(email)
+\end{itemize}
+
+\noindent requestUpdate(updatedUser):
+\begin{itemize}
+\item transition: Passes the updated User object to the AccountDatabase for modifications.
+\item exception: Throws DatabaseException if storage fails.
+\end{itemize}
+
+\subsubsection{Local Functions}
+None
+
 \newpage
 
 \bibliographystyle {plainnat}
